// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Equation Functions Fraction 1`] = `
Array [
  0.7,
  0,
  0.00966,
  0,
  0.7,
  0.20168,
  0,
  0,
  1,
]
`;

exports[`Equation Functions Fraction 2`] = `
Array [
  0.7,
  0,
  0.00966,
  0,
  0.7,
  0.09024,
  0,
  0,
  1,
]
`;

exports[`Equation Functions Fraction 3`] = `
Array [
  0.7,
  0,
  0.00966,
  0,
  0.7,
  -0.0126,
  0,
  0,
  1,
]
`;

exports[`Equation Functions Fraction 4`] = `
Array [
  0.0364,
  0,
  0.00546,
  0,
  0.008,
  0.16444,
  0,
  0,
  1,
]
`;

exports[`Equation Functions Fraction 5`] = `
Array [
  0.04732,
  0,
  0,
  0,
  0.008,
  0.049,
  0,
  0,
  1,
]
`;
